--- a/products/RAT-STATS/rstats_modules/stratified_variable_appraisal/src/UIRStatsSVA.ui
+++ b/products/RAT-STATS/rstats_modules/stratified_variable_appraisal/src/UIRStatsSVA.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>996</width>
+    <width>1066</width>
     <height>789</height>
    </rect>
   </property>
@@ -127,8 +127,15 @@
       </property>
       <property name="font">
        <font>
-        <pointsize>20</pointsize>
+        <pointsize>28</pointsize>
        </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QLabel
+{
+	border:6px solid gray;
+	border-radius:10px;
+}</string>
       </property>
       <property name="text">
        <string>No Data Available</string>
@@ -277,16 +284,16 @@
       <number>4</number>
      </property>
      <property name="topMargin">
-      <number>4</number>
+      <number>0</number>
      </property>
      <property name="rightMargin">
       <number>4</number>
      </property>
      <property name="bottomMargin">
-      <number>4</number>
+      <number>0</number>
      </property>
      <item>
-      <widget class="QFrame" name="">
+      <widget class="QFrame" name="frame">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
          <horstretch>0</horstretch>
@@ -468,7 +475,7 @@
              <property name="title">
               <string>Output Options:</string>
              </property>
-             <layout class="QHBoxLayout" name="horizontalLayout_7">
+             <layout class="QVBoxLayout" name="verticalLayout">
               <property name="leftMargin">
                <number>11</number>
               </property>
@@ -482,7 +489,7 @@
                <number>11</number>
               </property>
               <item>
-               <widget class="QCheckBox" name="m_chkExcelAccessOutput">
+               <widget class="QCheckBox" name="m_chkCSVOutput">
                 <property name="text">
                  <string>Excel / Access File</string>
                 </property>
@@ -531,39 +538,7 @@
    </attribute>
    <widget class="QWidget" name="dockWidgetContents_3">
     <layout class="QGridLayout" name="gridLayout_5">
-     <item row="0" column="0">
-      <layout class="QGridLayout" name="gridLayout_7">
-       <property name="leftMargin">
-        <number>4</number>
-       </property>
-       <property name="topMargin">
-        <number>4</number>
-       </property>
-       <property name="rightMargin">
-        <number>4</number>
-       </property>
-       <property name="bottomMargin">
-        <number>4</number>
-       </property>
-       <item row="0" column="0">
-        <widget class="QComboBox" name="m_cmbSizeInputSheets"/>
-       </item>
-       <item row="0" column="1">
-        <widget class="QPushButton" name="m_btnImportSampleSizeData">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item row="5" column="0">
+     <item row="4" column="0">
       <widget class="QTableWidget" name="m_tblSizes">
        <property name="editTriggers">
         <set>QAbstractItemView::AllEditTriggers</set>
@@ -587,11 +562,11 @@
         <bool>true</bool>
        </attribute>
        <attribute name="verticalHeaderVisible">
-        <bool>true</bool>
+        <bool>false</bool>
        </attribute>
       </widget>
      </item>
-     <item row="3" column="0">
+     <item row="2" column="0">
       <layout class="QGridLayout" name="gridLayout_6">
        <property name="leftMargin">
         <number>4</number>
@@ -605,49 +580,10 @@
        <property name="bottomMargin">
         <number>4</number>
        </property>
-       <item row="1" column="1">
-        <widget class="QComboBox" name="m_cmbExaminedSizeTable"/>
-       </item>
-       <item row="2" column="0">
+       <item row="2" column="1">
         <widget class="QLabel" name="m_lblAuditedSizeTable">
          <property name="text">
-          <string>Audited Column</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="QLabel" name="m_lblExaminedSizeTable">
-         <property name="text">
-          <string>Examined Column</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="0">
-        <widget class="QComboBox" name="m_cmbDataRowStartSizeTable"/>
-       </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="m_lblDataRowStartSizeTable">
-         <property name="text">
-          <string>Data Row Start</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="0">
-        <widget class="QComboBox" name="m_cmbAuditedSizeTable"/>
-       </item>
-       <item row="2" column="1">
-        <widget class="QLabel" name="m_lblDifferenceSizeTable">
-         <property name="text">
-          <string> Difference Column</string>
+          <string>Universe#</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
@@ -655,11 +591,37 @@
         </widget>
        </item>
        <item row="3" column="1">
-        <widget class="QComboBox" name="m_cmbDifferenceSizeTable"/>
+        <widget class="QComboBox" name="m_cmbUniverseCountSizeTable"/>
+       </item>
+       <item row="2" column="2">
+        <widget class="QLabel" name="m_lblDifferenceSizeTable">
+         <property name="text">
+          <string>Sample#</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="2">
+        <widget class="QComboBox" name="m_cmbSampleCountSizeTable"/>
+       </item>
+       <item row="2" column="0">
+        <widget class="QLabel" name="m_lblDataRowStartSizeTable">
+         <property name="text">
+          <string>Row Start</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0">
+        <widget class="QComboBox" name="m_cmbDataRowStartSizeTable"/>
        </item>
       </layout>
      </item>
-     <item row="4" column="0">
+     <item row="3" column="0">
       <layout class="QHBoxLayout" name="horizontalLayout_5">
        <property name="leftMargin">
         <number>4</number>
@@ -684,6 +646,38 @@
         <widget class="QPushButton" name="m_btnAddColumnSizeTable">
          <property name="text">
           <string>New Column</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="0" column="0">
+      <layout class="QGridLayout" name="gridLayout_7">
+       <property name="leftMargin">
+        <number>4</number>
+       </property>
+       <property name="topMargin">
+        <number>4</number>
+       </property>
+       <property name="rightMargin">
+        <number>4</number>
+       </property>
+       <property name="bottomMargin">
+        <number>4</number>
+       </property>
+       <item row="1" column="0">
+        <widget class="QComboBox" name="m_cmbSizeInputSheets"/>
+       </item>
+       <item row="1" column="2">
+        <widget class="QPushButton" name="m_btnImportSampleSizeData">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="text">
+          <string/>
          </property>
         </widget>
        </item>
@@ -855,8 +849,57 @@
         <bool>true</bool>
        </attribute>
        <attribute name="verticalHeaderVisible">
-        <bool>true</bool>
+        <bool>false</bool>
        </attribute>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+  </widget>
+  <widget class="QDockWidget" name="dockWidget">
+   <property name="minimumSize">
+    <size>
+     <width>126</width>
+     <height>100</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>524287</width>
+     <height>100</height>
+    </size>
+   </property>
+   <property name="features">
+    <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable|QDockWidget::DockWidgetVerticalTitleBar</set>
+   </property>
+   <property name="allowedAreas">
+    <set>Qt::BottomDockWidgetArea|Qt::TopDockWidgetArea</set>
+   </property>
+   <property name="windowTitle">
+    <string>Validation</string>
+   </property>
+   <attribute name="dockWidgetArea">
+    <number>8</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents_4">
+    <layout class="QVBoxLayout" name="verticalLayout_4">
+     <item>
+      <widget class="QListWidget" name="m_lstErrorConsole">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>16777215</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true"/>
+       </property>
       </widget>
      </item>
     </layout>
@@ -864,10 +907,35 @@
   </widget>
  </widget>
  <tabstops>
+  <tabstop>m_txtAuditName</tabstop>
   <tabstop>m_rdbExamined</tabstop>
+  <tabstop>m_rdbAudited</tabstop>
+  <tabstop>m_rdbDifference</tabstop>
+  <tabstop>m_rdbExaminedAndAudited</tabstop>
+  <tabstop>m_rdbAuditedAndDifference</tabstop>
+  <tabstop>m_rdbExaminedAndDifference</tabstop>
+  <tabstop>m_chkCSVOutput</tabstop>
+  <tabstop>m_chkTextOutput</tabstop>
+  <tabstop>m_cmbSizeInputSheets</tabstop>
+  <tabstop>m_btnImportSampleSizeData</tabstop>
+  <tabstop>m_cmbUniverseCountSizeTable</tabstop>
+  <tabstop>m_cmbSampleCountSizeTable</tabstop>
+  <tabstop>m_btnAddRowSizeTable</tabstop>
+  <tabstop>m_btnAddColumnSizeTable</tabstop>
+  <tabstop>m_tblSizes</tabstop>
   <tabstop>m_tabOutput</tabstop>
-  <tabstop>m_btnExit</tabstop>
+  <tabstop>m_cmbDataInputSheets</tabstop>
+  <tabstop>m_btnImportSampleInputData</tabstop>
+  <tabstop>m_cmbDataRowStartDataTable</tabstop>
+  <tabstop>m_cmbExaminedDataTable</tabstop>
+  <tabstop>m_cmbAuditedDataTable</tabstop>
+  <tabstop>m_cmbDifferenceDataTable</tabstop>
+  <tabstop>m_btnAddRowDataTable</tabstop>
+  <tabstop>m_btnAddColumnDataTable</tabstop>
+  <tabstop>m_tblData</tabstop>
   <tabstop>m_btnHelp</tabstop>
+  <tabstop>m_btnContinue</tabstop>
+  <tabstop>m_btnExit</tabstop>
  </tabstops>
  <resources/>
  <connections/>
