--- a/products/RAT-STATS/rstats_modules/unrestricted_attribute_appraisal/src/UIRStatsUAA.ui
+++ b/products/RAT-STATS/rstats_modules/unrestricted_attribute_appraisal/src/UIRStatsUAA.ui
@@ -290,7 +290,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QDockWidget" name="dockWidget">
+  <widget class="QDockWidget" name="m_dockOptions">
    <property name="features">
     <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
    </property>
@@ -512,7 +512,7 @@
      <x>0</x>
      <y>0</y>
      <width>1024</width>
-     <height>20</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -556,11 +556,15 @@
  </widget>
  <tabstops>
   <tabstop>m_txtAuditName</tabstop>
-  <tabstop>m_chkTextOutput</tabstop>
   <tabstop>m_spnUniverseSize</tabstop>
   <tabstop>m_spnSampleSize</tabstop>
-  <tabstop>m_tblOutput</tabstop>
   <tabstop>m_spnCOI</tabstop>
+  <tabstop>m_chkExcelAccessOutput</tabstop>
+  <tabstop>m_chkTextOutput</tabstop>
+  <tabstop>m_tblOutput</tabstop>
+  <tabstop>m_btnHelp</tabstop>
+  <tabstop>m_btnContinue</tabstop>
+  <tabstop>m_btnExit</tabstop>
  </tabstops>
  <resources/>
  <connections/>
