--- a/products/RAT-STATS/rstats_modules/unrestricted_attribute_appraisal/src/UIRStatsUAA.ui
+++ b/products/RAT-STATS/rstats_modules/unrestricted_attribute_appraisal/src/UIRStatsUAA.ui
@@ -351,16 +351,16 @@
           </property>
           <layout class="QGridLayout" name="gridLayout_2">
            <property name="leftMargin">
-            <number>9</number>
+            <number>6</number>
            </property>
            <property name="topMargin">
-            <number>9</number>
+            <number>6</number>
            </property>
            <property name="rightMargin">
-            <number>9</number>
+            <number>6</number>
            </property>
            <property name="bottomMargin">
-            <number>9</number>
+            <number>6</number>
            </property>
            <property name="spacing">
             <number>11</number>
@@ -381,6 +381,18 @@
            <string>Universe Size:</string>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout">
+           <property name="leftMargin">
+            <number>6</number>
+           </property>
+           <property name="topMargin">
+            <number>6</number>
+           </property>
+           <property name="rightMargin">
+            <number>6</number>
+           </property>
+           <property name="bottomMargin">
+            <number>6</number>
+           </property>
            <item>
             <widget class="QSpinBox" name="m_spnUniverseSize">
              <property name="alignment">
@@ -413,16 +425,16 @@
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_6">
            <property name="leftMargin">
-            <number>9</number>
+            <number>6</number>
            </property>
            <property name="topMargin">
-            <number>9</number>
+            <number>6</number>
            </property>
            <property name="rightMargin">
-            <number>9</number>
+            <number>6</number>
            </property>
            <property name="bottomMargin">
-            <number>9</number>
+            <number>6</number>
            </property>
            <item>
             <widget class="QSpinBox" name="m_spnSampleSize">
@@ -443,6 +455,18 @@
            <string>Number with COI:</string>
           </property>
           <layout class="QGridLayout" name="gridLayout">
+           <property name="leftMargin">
+            <number>6</number>
+           </property>
+           <property name="topMargin">
+            <number>6</number>
+           </property>
+           <property name="rightMargin">
+            <number>6</number>
+           </property>
+           <property name="bottomMargin">
+            <number>6</number>
+           </property>
            <item row="0" column="0">
             <widget class="QSpinBox" name="m_spnCOI">
              <property name="maximum">
@@ -471,6 +495,18 @@
            <string>Output Options:</string>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_4">
+           <property name="leftMargin">
+            <number>6</number>
+           </property>
+           <property name="topMargin">
+            <number>6</number>
+           </property>
+           <property name="rightMargin">
+            <number>6</number>
+           </property>
+           <property name="bottomMargin">
+            <number>6</number>
+           </property>
            <item>
             <widget class="QFrame" name="frame">
              <property name="sizePolicy">
@@ -479,18 +515,18 @@
                <verstretch>0</verstretch>
               </sizepolicy>
              </property>
-             <layout class="QHBoxLayout" name="horizontalLayout_2">
-              <item>
-               <widget class="QCheckBox" name="m_chkExcelAccessOutput">
-                <property name="text">
-                 <string>Excel / Access File</string>
-                </property>
-               </widget>
-              </item>
+             <layout class="QVBoxLayout" name="verticalLayout_3">
               <item>
                <widget class="QCheckBox" name="m_chkTextOutput">
                 <property name="text">
                  <string>Text File</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QCheckBox" name="m_chkCSVOutput">
+                <property name="text">
+                 <string>Excel / Access File</string>
                 </property>
                </widget>
               </item>
@@ -533,6 +569,7 @@
    <addaction name="menuFile"/>
    <addaction name="menuHelp"/>
   </widget>
+  <widget class="QStatusBar" name="m_statusBar"/>
   <action name="actionRecentlyUsed">
    <property name="text">
     <string>Recently Used</string>
@@ -559,7 +596,7 @@
   <tabstop>m_spnUniverseSize</tabstop>
   <tabstop>m_spnSampleSize</tabstop>
   <tabstop>m_spnCOI</tabstop>
-  <tabstop>m_chkExcelAccessOutput</tabstop>
+  <tabstop>m_chkCSVOutput</tabstop>
   <tabstop>m_chkTextOutput</tabstop>
   <tabstop>m_tblOutput</tabstop>
   <tabstop>m_btnHelp</tabstop>
