Added unit test for workbook streams Added Data Interchange format workbook stream Updated CSV input/output to be less error prone Change SVA UI to save last used tables for data/size sheets instead of trying to store actual data Added ModuleSession interface classes and changed all modules to use it Added unit test to StringUtils

--- a/products/RAT-STATS/rstats_modules/stratified_variable_appraisal/src/UIRStatsSVA.ui
+++ b/products/RAT-STATS/rstats_modules/stratified_variable_appraisal/src/UIRStatsSVA.ui
@@ -912,6 +912,28 @@
    </widget>
   </widget>
   <widget class="QStatusBar" name="m_statusBar"/>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>1103</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="actionRecently_Used"/>
+   </widget>
+   <addaction name="menuFile"/>
+  </widget>
+  <action name="actionRecently_Used">
+   <property name="text">
+    <string>Recently Used</string>
+   </property>
+  </action>
  </widget>
  <tabstops>
   <tabstop>m_txtAuditName</tabstop>
